--- a/.github/workflows/dockerhub-push-frontend_beta.yml
+++ b/.github/workflows/dockerhub-push-frontend_beta.yml
@@ -40,6 +40,6 @@ jobs:
         with:
           context: .
           file: ./Dockerfile.frontend_beta
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          platforms: linux/amd64
           push: true
-          tags: shirom/ledfx:frontend_beta
+          tags: katsaplias/ledfx:frontend_beta
