--- a/.github/workflows/dockerhub-push-latest.yml
+++ b/.github/workflows/dockerhub-push-latest.yml
@@ -41,4 +41,4 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
-          tags: shirom/ledfx:latest
+          tags: katsaplias/ledfx:latest
