--- a/setup-files/squeeze.conf
+++ b/setup-files/squeeze.conf
@@ -12,7 +12,7 @@ SL_NAME="$(hostname -s)"
 # Uncomment the next line if you want to point squeezelite at the IP address of
 # your squeezebox server. This is usually unnecessary as the server is
 # automatically discovered.
-#SB_SERVER_IP="10.251.107.70"
+SB_SERVER_IP="10.251.107.70"
 
 # Additional options to pass to squeezelite:
 # Please do not include -z to make squeezelite daemonise itself.
