--- a/.github/workflows/dockerhub-push-latest.yml
+++ b/.github/workflows/dockerhub-push-latest.yml
@@ -39,6 +39,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          platforms: linux/amd64
           push: true
-          tags: katsaplias/ledfx:latest
+          tags: katsaplias/ledfx
