--- a/Dockerfile.frontend_beta
+++ b/Dockerfile.frontend_beta
@@ -12,7 +12,7 @@ RUN apt-get install -y gcc \
 		       avahi-daemon \
                        pulseaudio 
 RUN pip install --upgrade pip wheel setuptools
-RUN pip install git+https://github.com/LedFx/LedFx@frontend_beta
+RUN pip install git+https://github.com/LedFx/LedFx/releases/tag/v2.0.67
 
 RUN apt-get install -y alsa-utils
 RUN adduser root pulse-access
